--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -599,107 +599,107 @@ stories:
   domain: http://itemonline.com/
   link: https://www.itemonline.com/iu-s-ramsey-ready-to-face-namesake-s-alma-mater/article_262fe801-8a5e-5275-ba9c-bcd8f4b29032.html
 images:
-- name: bordercrossing-bordercrossing-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-monet-one.jpg
-- name: subway-subway-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-- name: copper-circuit-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-open-statue.jpg
-- name: crow-crow-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
-- name: copper-circuit-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hallway-mirrors-hotel.jpg
-- name: fence-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-dali.jpg
-- name: gypsymosaic-gypsy-eyes-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-brush.jpg
-- name: capital-battle-capitolbattle-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-cinnamon-rolls.jpg
-- name: aws-s3-square-file-00-00-35-50-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-35-50-square.jpg
-- name: old-church-oldchurch-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-5.png
-- name: oldhousecars-house-old-cars-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sunday.jpg
-- name: downtown-los-angeles-downtown-la-bright-sand.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-bright-sand.JPG
-- name: berlinwall2-berlinwall-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-space-pizza.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-- name: old-granary-field-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
-- name: ellis-island-ellis-island-room-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-internet-numbers.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-internet-numbers.png
-- name: mistywoods-babyfoot-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alberto-giacometti.jpg
-- name: copper-circuit-yellow-tree-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-yellow-tree-in-rocks.jpg
-- name: copper-circuit-train-france-high-speed-in-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-france-high-speed-in-station.jpg
-- name: bf-skinner-stainless-tree-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stainless-tree-clouds.jpg
-- name: bluelake-gan-vogh-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
-- name: stalin-time-oxford-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-oxford-old-building.jpg
-- name: oldcabin-oldcabin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-electricity.jpg
-- name: gypsymosaic-gypsy-eyes-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-bright-sand.jpg
-- name: windowmountain-window-mountain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
-- name: ellis-island-ellis-island-room-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-cinnamon-rolls.jpg
-- name: bf-skinner-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bridge-over-columbia.jpg
-- name: castle-wall-DSC-0067-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
-- name: nazi-invasion-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary_36331800650_o.jpg
-- name: blossombar-crafty-painting-file-00-00-50-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-38.jpg
-- name: razorcliff-razorcliff-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-asteroids.jpg
-- name: old-school-house-old-schoolhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-kand-two.jpg
-- name: fence-fence-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crafty-painting.jpg
-- name: curtain-curtain-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-- name: fence-fence-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-three.jpg
-- name: catacombs-catacombs-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-rain.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj.jpg
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: copper-circuit-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cemetery_35902984304_o.jpg
-- name: capital-battle-capitolbattle-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-deep-connections.jpg
-- name: oldhouse-oldhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-graham-sutherland.jpg
-- name: bordercrossing-bordercrossing-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-marcel-duchamp.jpg
-- name: aws-s3-square-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-supreme-court-judgement.jpg
-- name: white-house-whitehouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-marcel-duchamp.jpg
-- name: stories-castle-walls-cannon-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-walls-cannon-satan-red.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
+- name: nazi-invasion-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-steam-engine-iceland.jpg
+- name: amusement-park-amusement-park-2-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-wols.jpg
+- name: downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-feed-people.JPG
+- name: hollywood-building-hollywood-building-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-diego-rivera1.jpg
+- name: subway-subway-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-far-away.jpg
+- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+- name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
+- name: old-cabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-satan-red.jpg
+- name: downtown-los-angeles-downtown-la-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-smoking-cigarette.JPG
+- name: mosaic-face-mosaic-face-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-oily-mcoilface.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
+- name: old-cabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
+- name: sand-hand-sand-hand-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-dali.jpg
+- name: la-muse-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-waterfront-path.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-crunch-paper.jpg
+- name: aws-s3-stories-vancouver-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
+- name: carry-load-carryload-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-rainbow-festival.jpg
+- name: oldhouse-granaryfield-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-blocks.jpg
+- name: walled-garden-walled-garden-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-dresden.jpg
+- name: castle-wall-DSC-0067-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-post-modern.JPG
+- name: bordercrossing-bordercrossing-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
+- name: oldcabin-store-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-deep-connections.jpg
+- name: aws-s3-stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+- name: la-muse-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-bletchley-computer-racks.jpg
+- name: yuma-bank-yuma-bak-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-clean-view.jpg
+- name: castle-wall-DSC-0067-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-storm.JPG
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: stalin-time-underground-subway_35929749683_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-underground-subway_35929749683_o.jpg
+- name: curtain-curtain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
+- name: catacombs-catacombs-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-oily-mcoilface.jpg
+- name: stalin-time-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-container-ship-in-seattle.jpg
+- name: gypsy-wagon-gypsywagon-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
+- name: fence-fence-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smoking-cigarette.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+- name: birdhouse-birdhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-neo-instinct.jpg
+- name: old-barn-old-barn-1500-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sand-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
+- name: rain-princess-berline-wall-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-berline-wall-old-building.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+- name: oldhousecars-house-old-cars-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-free-woman.jpg
+- name: windowmountain-window-mountain-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smoking-cigarette.jpg
+- name: san-francisco-street-view-san-francisco-street-view-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-post-modern.jpg
+- name: death-valley-death-valley-national-park-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
+- name: nazi-invasion-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grafitti-woman-bangs.jpg
+- name: stalin-time-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church-in-field.jpg
+- name: rockingchair-face-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crabapple.jpg
+- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
+- name: old-school-house-old-schoolhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-clean-view.jpg
+- name: crow-crow-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
 ---
 Everybodys Everything Stands As A Touching Tribute To Late Lil Peep.&nbsp;Civil War Meeting Will Hear About Care For Veterans.&nbsp;Lady Gaga Spotted Kissing Mystery Man In Las Vegas.&nbsp;Worlds Strongest Man Mark Henry Returns Home For Induction.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;Winning Numbers Drawn In 'Cash 5' Game.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;HPEs Commitment To Protecting Human Rights.&nbsp;
